# DumbWatch

./: README.md  dumbwatch.py  pyproject.toml
